--- a/style.css
+++ b/style.css
@@ -55,6 +55,32 @@ kbd {
     color:#FFF;
 }
 
+
+#restartBtn{
+    display: none;
+    position: fixed;
+    bottom: 0px;
+    margin:0;
+    left:50%;
+    transform: translate(-50%,-100%);
+    z-index: 1000;
+}
+#restartBtn.show{
+    display: block;
+    animation: 0.5s linear infinite alternate fade-in;
+}
+
+@keyframes fade-in {
+    0%{ 
+        filter:hue-rotate(0deg);   
+        opacity: 0;
+    }
+    100%{
+        filter:hue-rotate(360deg);   
+        opacity: 1;
+    }
+}
+
 /* From my old game orbia */
 
 body {
@@ -91,7 +117,7 @@ canvas {
     font-size: 1.1rem;
     line-height: 1.8rem;
 }
-#banner > button {
+button {
     background: linear-gradient(to top right, salmon, hotpink);
     box-shadow: 0px 0px 10px salmon, 0px 0px 20px hotpink;
     border: none;
